Fixed menu in gallery on mobile

--- a/Restaurant/style.css
+++ b/Restaurant/style.css
@@ -281,7 +281,7 @@ table {
         top: 20vh;
         width: 100%;
         display: none;
-        z-index: 1;
+        z-index: 3;
     }
 
     .nav-links ul{
